css/jumbotron.css
/* Move down content because we have a fixed navbar that is 50px tall */
body {
  padding-top: 50px;
}

h1 {
	margin-top: 10px;
}

h1:before { 
  display: block; 
  content: " "; 
/*  margin-top: -100px; 
  height: 100px; */
  visibility: hidden; 
}

h2, p {
  margin-bottom: 10px;
}

h2 a:hover {
  text-decoration: none;
}

h3 {
  font-size: 21px;
  font-weight: 300;
}

.jumbotron p, p {
  font-weight: 300;
}

img {
  max-width: 90%;
}

/* Offset the anchor - e.g. use-case entries not covered by top nav bar */
.anchor {
  display: block;
  position: relative;
  top: -40px;
  visibility: hidden;
}

/*.container > p {
  font-size: 18px;  
}*/

.container.big p, .container.big li {
  font-size: 18px;  
}

.jumbotron {
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
  margin-bottom: 0;
}

.jumbotron h1 {
  font-size: 3.3em;
}

.jumbotron h2 {
  font-size: 24px;
}

.jumbotron p {
  font-size: 18px;
}

.top_product {
  padding-top: 8px;
  padding-bottom: 0px;
}

.slipstream-main-story {
  background: #eee url(/img/content/slipstream_schema_color_on_transparent_25opacity_2500px.png) no-repeat center center;
}

.nuvlabox-main-story {
  background: #E2EFF7 url(/img/content/nuvlabox_schema_color_on_transparent_25opacity_1000px.png) no-repeat center center;
}

.container {
  margin: 0px auto;
  padding-right: 24px;
  padding-left: 24px;
}

.container.personae {
  max-width: 620px !important;
}

.center {
  display: block !important;
  float: none !important;
  margin-left: auto !important;
  margin-right: auto !important;
  left: 0;
  right: 0
}

.quotes img {
  max-width: 200px;
  padding-top: 20px;
}

div.odd {
  background: #eee;
}

div.even {
  background: white;
}

div.plain {
  background: white;
}

div.quote {
  margin-top: 20px;
  margin-bottom: 20px;
  max-width: 500px;
}

div.nuvlabox.even,
div.slipstream.even {
  background: white;
}

div.slipstream.odd {
  background: #eee;
}

div.nuvlabox.odd {
  background: #E2EFF7;
}

.usecases {
  
}

.address p {
  margin: 0px auto;
}

.spacy {
  padding-top: 10px;
  padding-bottom: 10px;
}

.container .container.spacy {
  padding-top: 30px !important;
  padding-bottom: 30px !important;
}

.banner {
  border: none;
  display: block;
  height: 170px;
  overflow: hidden;
  position: relative;
  float: right;
  text-align: center;
  width: 170px;
}

.banner div {
  color: white;
  background-color: #222;
  opacity: 1;
  z-index: 1000;
  text-align: center;
  float: right;
  width: 250px;
  font-size: 22px;
  margin-top: 55px;
  margin-right: -55px;
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-box-shadow: 0 0 6px 2px white;
  -moz-box-shadow: 0 0 6px 2px white;
  box-shadow: 0 0 6px 2px white;
  overflow: hidden;
}

.soon {
  border: none;
  display: block;
  overflow: hidden;
  position: relative;
  text-align: center;
}

.soon > div {
  color: white;
  background-color: #a00000;
  opacity: 1;
  z-index: 1000;
  text-align: center;
  float: right;
  width: 150px;
  font-size: 22px;
  margin-top: 13px;
  margin-right: -62px;
  -webkit-transform: rotate(45deg);
  -moz-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-box-shadow: 0 0 6px 2px white;
  -moz-box-shadow: 0 0 6px 2px white;
  box-shadow: 0 0 6px 2px white;
  overflow: hidden;
}

#small_logo_twitter {
  background-image: url(/img/design/social_logos/twitter_hover.png);
  background-repeat: no-repeat;
  background-position: left center;
  height: 50px;
}

#small_logo_googleplus {
  background-image: url(/img/design/social_logos/googleplus_hover.png);
  background-repeat: no-repeat;
  background-position: left center;
  height: 50px;
}

#small_logo_linkedin {
  background-image: url(/img/design/social_logos/linkedin_hover.png);
  background-repeat: no-repeat;
  background-position: left center;
  height: 50px;
}

.twitter-share-button {
  margin: 20px 0 0 0;  
}

.jumbotron.nuvlabox {
  background-image: url('/img/content/nuvlabox_logo_red_on_transparent.svg');
}

.jumbotron.slipstream {
  background-image: url('/img/content/slipstream_logo_red_on_transparent.svg');
}

.jumbotron.nuvla {
  background-image: url('/img/content/nuvla_logo_red_on_transparent.svg');
}

.jumbotron.top_product {
  color: white;
  background-color: rgb(160,0,0);
}

.jumbotron.top_product h1,
.jumbotron.top_product a,
.jumbotron.top_product p {
  color: white;
}

.main-story.nuvlabox {
  background: #E2EFF7;
}

.banner a, .banner a:visited, .banner a:hover, .banner a:active {
  color: white;
  text-decoration: none;
}

.social-network div a img {
  border-radius: 5px;
}

#personae a, #personae a:visited, #personae a:hover, #personae a:active {
  text-decoration: none;
}

.category-index img {
  max-width: 25em;
}

.row-highlights {
  background: white;
  margin: 15px 0;
  padding: 1px 10px 15px 10px;
  border: 4px solid white;
}

.row-summary > div > div {
  background: white;
  margin: 15px 0;
  padding: 1px 10px 15px 10px;
  border: 4px solid white;
}

.row-summary > div > div:hover,
.row-highlights:hover {
  background: #E6E6E6;
  border: 4px solid #800000;
}

.cloud > div > div {
  border: 4px solid white;
}

.cloud > div > div:hover {
  border: 4px solid #800000;
}

.cloud img {
  max-height: 130px;
}

.row-summary-sixsq img {
  max-width: 200px;
  max-height: 60px;
}

.row-summary-sixsq center {
  height: 60px;
}

@media (min-width:1200px) { 
  .row-summary-sixsq .col-md-4 > div > div {
    height: 160px;
    /*background: blue;*/
  }
}

@media (max-width:1200px) { 
  .row-summary-sixsq .col-md-4 > div > div {
    height: 180px;
    /*background: white;*/
  }
}

@media (max-width:992px) { 
  .row-summary-sixsq .col-md-4 > div > div {
    height: auto;
    /*background: yellow;*/
  }
}

@media (max-width:768px) { 
  .row-summary-sixsq .col-md-4 > div > div {
    height: auto;
    /*background: black;*/
  }
}


@media (min-width:1200px) { 
  .row-summary-slipstream .col-md-4 > div > div {
    height: 270px;
    /*background: blue;*/
  }
}

@media (max-width:1200px) { 
  .row-summary-slipstream .col-md-4 > div > div {
    height: 340px;
    /*background: white;*/
  }
}

@media (max-width:992px) { 
  .row-summary-slipstream .col-md-4 > div > div {
    height: auto;
    /*background: yellow;*/
  }
}

@media (max-width:768px) { 
  .row-summary-slipstream .col-md-4 > div > div {
    height: auto;
    /*background: black;*/
  }
}


@media (min-width:1200px) { 
  .cloud > .row .col-md-3 {
    height: 200px;
    /*background: blue;*/
  }
}

@media (max-width:1200px) { 
  .cloud > .row .col-md-3 {
    height: 200px;
    /*background: white;*/
  }
}

@media (max-width:992px) { 
  .cloud > .row .col-md-3 > div > div {
    height: auto;
    /*background: yellow;*/
  }
}

@media (max-width:768px) { 
  .cloud > .row .col-md-3 > div > div {
    height: auto;
    /*background: black;*/
  }
}


@media (min-width:1200px) { 
  .row-summary-slipstream-usecases .col-md-4 > div > div {
    height: 190px;
    /*background: blue;*/
  }
}

@media (max-width:1200px) { 
  .row-summary-slipstream-usecases .col-md-4 > div > div {
    height: 220px;
    /*background: white;*/
  }
}

@media (max-width:992px) { 
  .row-summary-slipstream-usecases .col-md-4 > div > div {
    height: auto;
    /*background: yellow;*/
  }
}

@media (max-width:768px) { 
  .row-summary-slipstream-usecases .col-md-4 > div > div {
    height: auto;
    /*background: black;*/
  }
}


@media (min-width:1200px) { 
  .row-summary-nuvlabox .col-md-4 > div > div {
    height: 250px;
    /*background: blue;*/
  }
}

@media (max-width:1200px) { 
  .row-summary-nuvlabox .col-md-4 > div > div {
    height: 340px;
    /*background: white;*/
  }
}

@media (max-width:992px) { 
  .row-summary-nuvlabox .col-md-4 > div > div {
    height: auto;
    /*background: yellow;*/
  }
}

@media (max-width:768px) { 
  .row-summary-nuvlabox .col-md-4 > div > div {
    height: auto;
    /*background: black;*/
  }
}

@media (min-width:1200px) { 
  .row-summary-nuvlabox-usecases .col-md-4 > div > div {
    height: 170px;
    /*background: blue;*/
  }
}

@media (max-width:1200px) { 
  .row-summary-nuvlabox-usecases .col-md-4 > div > div {
    height: 220px;
    /*background: white;*/
  }
}

@media (max-width:992px) { 
  .row-summary-nuvlabox-usecases .col-md-4 > div > div {
    height: auto;
    /*background: yellow;*/
  }
}

@media (max-width:768px) { 
  .row-summary-nuvlabox-usecases .col-md-4 > div > div {
    height: auto;
    /*background: black;*/
  }
}

.col-2-image {
	font-size: 2.5em;
	align-items: center;
	color: #CF2121;
  padding-top: 25px;
}

.col-2-image h2 {
  font-size: 3.3em;
}

/* Multi-column dropdown menu */
.dropdown-menu {
	min-width: 100px;
}
.dropdown-menu.columns-2 {
	min-width: 300px;
}
.dropdown-menu.columns-3 {
	min-width: 450px;
}
.dropdown-menu li a {
	padding: 5px 15px;
	font-weight: 300;
}
.multi-column-dropdown {
	list-style: none;
	padding-left: 10px;
	padding-right: 10px;
}
.multi-column-dropdown li a {
	display: block;
	clear: both;
	line-height: 1.428571429;
	color: #333;
	white-space: normal;
}
.multi-column-dropdown li a:hover {
	text-decoration: none;
	color: #262626;
	background-color: #f5f5f5;
}

@media (max-width: 767px) {
	.dropdown-menu.multi-column {
		min-width: 240px !important;
		overflow-x: hidden;
	}
}

